# movieLensDBT

./: .gitignore  README.md  pyproject.toml
movielensDBTproject/: .gitignore  dbt_project.yml  packages.yml
movielensDBTproject/macros/: no_nulls_columns.sql
movielensDBTproject/models/: schema.yml  sources.yml
movielensDBTproject/models/dim/: dim_genome_tags.sql  dim_movies.sql  dim_movies_with_tags.sql  dim_users.sql
movielensDBTproject/models/fact/: fct_genome_scores.sql  fct_ratings.sql
movielensDBTproject/models/mart/: mart_movie_releases.sql
movielensDBTproject/models/staging/: src_genome_scores.sql  src_genome_tags.sql  src_links.sql  src_movies.sql  src_ratings.sql  src_tags.sql
movielensDBTproject/snapshots/: snap_tags.sql
movielensDBTproject/tests/: relevance_score_test.sql
