[tool.poetry]
name = "movielensdbt"
version = "0.1.0"
description = ""
authors = ["Frankenpotato <96116778+Frankenpotato@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-databricks = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
